--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
-nomad-cars/
-│
-├── index.html       # Page d'accueil
-├── style.css        # Fichier de styles
-└── images/          # Dossier pour les images (facultatif)
-    ├── voiture1.jpg
-    └── voiture2.jpg
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Majestic Auto - Location de Voitures</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenue chez Majestic Auto</h1>
+        <p>Location de voitures à Marrakech</p>
+    </header>
+    <section class="vehicles">
+        <h2>Nos véhicules disponibles</h2>
+        <div class="vehicle">
+            <img src="images/voiture1.jpg" alt="Voiture 1">
+            <p>Voiture 1 - Description</p>
+        </div>
+        <div class="vehicle">
+            <img src="images/voiture2.jpg" alt="Voiture 2">
+            <p>Voiture 2 - Description</p>
+        </div>
+        <!-- Ajoute d'autres véhicules ici -->
+    </section>
+    <footer>
+        <p>Contactez-nous : <a href="mailto:contact@majesticauto.com">contact@majesticauto.com</a></p>
+    </footer>
+</body>
+</html>
