--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Majestic Auto - Location de Voitures</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Nomad Cars - Location de voitures à Marrakech</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Bienvenue chez Majestic Auto</h1>
-        <p>Location de voitures à Marrakech</p>
-    </header>
-    <section class="vehicles">
-        <h2>Nos véhicules disponibles</h2>
-        <div class="vehicle">
-            <img src="images/voiture1.jpg" alt="Voiture 1">
-            <p>Voiture 1 - Description</p>
-        </div>
-        <div class="vehicle">
-            <img src="images/voiture2.jpg" alt="Voiture 2">
-            <p>Voiture 2 - Description</p>
-        </div>
-        <!-- Ajoute d'autres véhicules ici -->
-    </section>
-    <footer>
-        <p>Contactez-nous : <a href="mailto:contact@majesticauto.com">contact@majesticauto.com</a></p>
-    </footer>
+
+  <header>
+    <h1>Nomad Cars</h1>
+    <p>Location de voitures à Marrakech - Toutes gammes, prix raisonnables, livraison 24h</p>
+  </header>
+
+  <section class="fleet">
+    <h2>Nos véhicules</h2>
+    <div class="car">
+      <img src="https://via.placeholder.com/300x200?text=Citadine" alt="Citadine">
+      <h3>Citadine</h3>
+      <p>Idéale pour la ville. Économique et pratique.</p>
+    </div>
+    <div class="car">
+      <img src="https://via.placeholder.com/300x200?text=4x4" alt="4x4">
+      <h3>4x4</h3>
+      <p>Parfait pour les excursions et les longues routes.</p>
+    </div>
+    <div class="car">
+      <img src="https://via.placeholder.com/300x200?text=Berline" alt="Berline">
+      <h3>Berline</h3>
+      <p>Confort haut de gamme pour les professionnels ou familles.</p>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h2>Contactez-nous</h2>
+    <p>Email : <a href="mailto:chhfgf@fjjjfhf.com">chhfgf@fjjjfhf.com</a></p>
+    <p>Téléphone : <a href="tel:+2120706344088">+212 07 06 34 40 88</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Nomad Cars. Tous droits réservés.</p>
+  </footer>
+
 </body>
 </html>
