--- a/index.html
+++ b/index.html
@@ -2,45 +2,71 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nomad Cars - Location de voitures à Marrakech</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nomad Cars - Location de Voitures à Marrakech</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <!-- En-tête -->
   <header>
-    <h1>Nomad Cars</h1>
-    <p>Location de voitures à Marrakech - Toutes gammes, prix raisonnables, livraison 24h</p>
+    <div class="logo">
+      <h1>Nomad Cars</h1>
+      <p>Location de Voitures à Marrakech</p>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#about">À propos</a></li>
+        <li><a href="#vehicles">Nos Véhicules</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section class="fleet">
-    <h2>Nos véhicules</h2>
-    <div class="car">
-      <img src="https://via.placeholder.com/300x200?text=Citadine" alt="Citadine">
-      <h3>Citadine</h3>
-      <p>Idéale pour la ville. Économique et pratique.</p>
-    </div>
-    <div class="car">
-      <img src="https://via.placeholder.com/300x200?text=4x4" alt="4x4">
-      <h3>4x4</h3>
-      <p>Parfait pour les excursions et les longues routes.</p>
-    </div>
-    <div class="car">
-      <img src="https://via.placeholder.com/300x200?text=Berline" alt="Berline">
-      <h3>Berline</h3>
-      <p>Confort haut de gamme pour les professionnels ou familles.</p>
+  <!-- Section À propos -->
+  <section id="about" class="about">
+    <div class="container">
+      <h2>À propos de Nomad Cars</h2>
+      <p>Bienvenue chez **Nomad Cars**, votre agence de location de voitures à Marrakech. Nous vous proposons une large gamme de véhicules adaptés à vos besoins : citadines, 4x4, berlines et plus encore.</p>
+      <p>Nos services sont fiables, avec une livraison rapide sous 24h et des prix compétitifs pour toutes les gammes de voitures.</p>
     </div>
   </section>
 
-  <section class="contact">
+  <!-- Section Véhicules -->
+  <section id="vehicles" class="vehicles">
+    <h2>Nos Véhicules</h2>
+    <div class="vehicle-container">
+      <div class="vehicle">
+        <img src="https://via.placeholder.com/300x200?text=Citadine" alt="Citadine">
+        <h3>Citadine</h3>
+        <p>Prix : 200 MAD/jour</p>
+        <p>Une voiture idéale pour la ville. Économique et pratique pour vos déplacements à Marrakech.</p>
+      </div>
+      <div class="vehicle">
+        <img src="https://via.placeholder.com/300x200?text=4x4" alt="4x4">
+        <h3>4x4</h3>
+        <p>Prix : 500 MAD/jour</p>
+        <p>Pour les aventures dans les montagnes ou les excursions dans le désert. Confort et performance.</p>
+      </div>
+      <div class="vehicle">
+        <img src="https://via.placeholder.com/300x200?text=Berline" alt="Berline">
+        <h3>Berline</h3>
+        <p>Prix : 350 MAD/jour</p>
+        <p>Un véhicule haut de gamme pour les voyageurs ou les hommes d'affaires en quête de confort.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section Contact -->
+  <section id="contact" class="contact">
     <h2>Contactez-nous</h2>
     <p>Email : <a href="mailto:chhfgf@fjjjfhf.com">chhfgf@fjjjfhf.com</a></p>
     <p>Téléphone : <a href="tel:+2120706344088">+212 07 06 34 40 88</a></p>
+    <p>Adresse : Marrakech, Maroc</p>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Nomad Cars. Tous droits réservés.</p>
   </footer>
-
 </body>
 </html>
