--- a/index.html
+++ b/index.html
@@ -5,53 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nomad Cars - Location de Voitures à Marrakech</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- En-tête -->
+
+  <!-- En-tête avec un fond dynamique -->
   <header>
-    <div class="logo">
+    <div class="overlay">
       <h1>Nomad Cars</h1>
-      <p>Location de Voitures à Marrakech</p>
+      <p>Location de Voitures à Marrakech - Service rapide et de qualité</p>
+      <a href="#vehicles" class="btn">Découvrez nos véhicules</a>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#about">À propos</a></li>
-        <li><a href="#vehicles">Nos Véhicules</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
-  <!-- Section À propos -->
+  <!-- Section à propos -->
   <section id="about" class="about">
     <div class="container">
       <h2>À propos de Nomad Cars</h2>
-      <p>Bienvenue chez **Nomad Cars**, votre agence de location de voitures à Marrakech. Nous vous proposons une large gamme de véhicules adaptés à vos besoins : citadines, 4x4, berlines et plus encore.</p>
-      <p>Nos services sont fiables, avec une livraison rapide sous 24h et des prix compétitifs pour toutes les gammes de voitures.</p>
+      <p>Bienvenue chez **Nomad Cars** ! Nous offrons une expérience unique de location de voitures à Marrakech. Nous avons des véhicules de toutes gammes pour satisfaire vos besoins : citadines, 4x4, SUV, et bien plus encore.</p>
+      <p>Nos prix sont compétitifs et nous assurons une livraison rapide en 24h pour toutes vos réservations.</p>
     </div>
   </section>
 
-  <!-- Section Véhicules -->
+  <!-- Section des véhicules avec des images et descriptions -->
   <section id="vehicles" class="vehicles">
     <h2>Nos Véhicules</h2>
     <div class="vehicle-container">
       <div class="vehicle">
-        <img src="https://via.placeholder.com/300x200?text=Citadine" alt="Citadine">
+        <img src="https://via.placeholder.com/400x250?text=Citadine" alt="Citadine">
         <h3>Citadine</h3>
-        <p>Prix : 200 MAD/jour</p>
-        <p>Une voiture idéale pour la ville. Économique et pratique pour vos déplacements à Marrakech.</p>
+        <p>Idéale pour vos déplacements en ville. Pratique, économique et confortable.</p>
+        <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://via.placeholder.com/300x200?text=4x4" alt="4x4">
+        <img src="https://via.placeholder.com/400x250?text=4x4" alt="4x4">
         <h3>4x4</h3>
-        <p>Prix : 500 MAD/jour</p>
-        <p>Pour les aventures dans les montagnes ou les excursions dans le désert. Confort et performance.</p>
+        <p>Parfait pour les excursions ou un séjour dans le désert. Confort et robustesse assurés.</p>
+        <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://via.placeholder.com/300x200?text=Berline" alt="Berline">
+        <img src="https://via.placeholder.com/400x250?text=Berline" alt="Berline">
         <h3>Berline</h3>
-        <p>Prix : 350 MAD/jour</p>
-        <p>Un véhicule haut de gamme pour les voyageurs ou les hommes d'affaires en quête de confort.</p>
+        <p>Pour un voyage élégant et confortable, optez pour notre berline haut de gamme.</p>
+        <a href="#" class="btn">Louer cette voiture</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section des témoignages -->
+  <section id="testimonials" class="testimonials">
+    <div class="container">
+      <h2>Ce que disent nos clients</h2>
+      <div class="testimonial">
+        <p>"Excellent service, les voitures sont de très bonne qualité. Je recommande vivement !"</p>
+        <span>- Samira, Marrakech</span>
+      </div>
+      <div class="testimonial">
+        <p>"J'ai loué une 4x4 pour un road trip. Tout a été parfait, livraison rapide, et véhicule impeccable."</p>
+        <span>- Ahmed, Casablanca</span>
       </div>
     </div>
   </section>
@@ -68,5 +79,6 @@
   <footer>
     <p>&copy; 2025 Nomad Cars. Tous droits réservés.</p>
   </footer>
+
 </body>
 </html>
