--- a/index.html
+++ b/index.html
@@ -32,37 +32,22 @@
     <h2>Nos Véhicules</h2>
     <div class="vehicle-container">
       <div class="vehicle">
-        <img src="https://via.placeholder.com/400x250?text=Citadine" alt="Citadine">
+        <img src="https://images.unsplash.com/photo-1506109265552-5f8b9c49b79d" alt="Citadine">
         <h3>Citadine</h3>
         <p>Idéale pour vos déplacements en ville. Pratique, économique et confortable.</p>
         <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://via.placeholder.com/400x250?text=4x4" alt="4x4">
+        <img src="https://images.unsplash.com/photo-1572344463231-37856a5a0b25" alt="4x4">
         <h3>4x4</h3>
         <p>Parfait pour les excursions ou un séjour dans le désert. Confort et robustesse assurés.</p>
         <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://via.placeholder.com/400x250?text=Berline" alt="Berline">
+        <img src="https://images.unsplash.com/photo-1600746614997-b2b2c06d2425" alt="Berline">
         <h3>Berline</h3>
         <p>Pour un voyage élégant et confortable, optez pour notre berline haut de gamme.</p>
         <a href="#" class="btn">Louer cette voiture</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Section des témoignages -->
-  <section id="testimonials" class="testimonials">
-    <div class="container">
-      <h2>Ce que disent nos clients</h2>
-      <div class="testimonial">
-        <p>"Excellent service, les voitures sont de très bonne qualité. Je recommande vivement !"</p>
-        <span>- Samira, Marrakech</span>
-      </div>
-      <div class="testimonial">
-        <p>"J'ai loué une 4x4 pour un road trip. Tout a été parfait, livraison rapide, et véhicule impeccable."</p>
-        <span>- Ahmed, Casablanca</span>
       </div>
     </div>
   </section>
@@ -71,14 +56,4 @@
   <section id="contact" class="contact">
     <h2>Contactez-nous</h2>
     <p>Email : <a href="mailto:chhfgf@fjjjfhf.com">chhfgf@fjjjfhf.com</a></p>
-    <p>Téléphone : <a href="tel:+2120706344088">+212 07 06 34 40 88</a></p>
-    <p>Adresse : Marrakech, Maroc</p>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Nomad Cars. Tous droits réservés.</p>
-  </footer>
-
-</body>
-</html>
+    <p>Téléphone : <a href="tel:+2120706344088">+212
