--- a/index.html
+++ b/index.html
@@ -56,4 +56,14 @@
   <section id="contact" class="contact">
     <h2>Contactez-nous</h2>
     <p>Email : <a href="mailto:chhfgf@fjjjfhf.com">chhfgf@fjjjfhf.com</a></p>
-    <p>Téléphone : <a href="tel:+2120706344088">+212
+    <p>Téléphone : <a href="tel:+2120706344088">+212 07 06 34 40 88</a></p>
+    <p>Adresse : Marrakech, Maroc</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Nomad Cars. Tous droits réservés.</p>
+  </footer>
+
+</body>
+</html>
