--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <h2>À propos de Nomad Cars</h2>
       <p>Bienvenue chez **Nomad Cars** ! Nous offrons une expérience unique de location de voitures à Marrakech. Nous avons des véhicules de toutes gammes pour satisfaire vos besoins : citadines, 4x4, SUV, et bien plus encore.</p>
-      <p>Nos prix sont compétitifs et nous assurons une livraison rapide en 24h pour toutes vos réservations.</p>
+      <p>Nos prix sont compétitifs et nous assurons une livraison rapide en 24h pour toutes vos réservations. À partir de **200 DHS** par jour.</p>
     </div>
   </section>
 
@@ -32,21 +32,24 @@
     <h2>Nos Véhicules</h2>
     <div class="vehicle-container">
       <div class="vehicle">
-        <img src="https://images.unsplash.com/photo-1506109265552-5f8b9c49b79d" alt="Citadine">
-        <h3>Citadine</h3>
-        <p>Idéale pour vos déplacements en ville. Pratique, économique et confortable.</p>
+        <!-- Image de voiture Mercedes -->
+        <img src="https://images.unsplash.com/photo-1541352052840-c3e1a2a8e12a?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjA1fDB8MHxwaG90by1wYWdlfHx8fGVzdHx8fG1lcmNlZGVzJTIwYmVuemJ8ZW58MHx8fHwxNjc1NzY0Njcw&ixlib=rb-1.2.1&q=80&w=1080" alt="Mercedes-Benz">
+        <h3>Mercedes-Benz</h3>
+        <p>Un véhicule élégant et confortable pour vos déplacements à Marrakech. À partir de 200 DHS/jour.</p>
         <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://images.unsplash.com/photo-1572344463231-37856a5a0b25" alt="4x4">
-        <h3>4x4</h3>
-        <p>Parfait pour les excursions ou un séjour dans le désert. Confort et robustesse assurés.</p>
+        <!-- Image de SUV Peugeot -->
+        <img src="https://images.unsplash.com/photo-1596749201597-cd1db34f329d?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjA1fDB8MHxwaG90by1wYWdlfHx8fGVzdHx8fFZlaG91dGJvYXMlMjBwb3VnbmV0JTIwY2VyaXNjfGVufDB8fHx8fDE2NzU3NjI3NzQ&ixlib=rb-1.2.1&q=80&w=1080" alt="SUV Peugeot">
+        <h3>SUV Peugeot</h3>
+        <p>Le SUV idéal pour explorer les environs de Marrakech avec confort. À partir de 200 DHS/jour.</p>
         <a href="#" class="btn">Louer cette voiture</a>
       </div>
       <div class="vehicle">
-        <img src="https://images.unsplash.com/photo-1600746614997-b2b2c06d2425" alt="Berline">
-        <h3>Berline</h3>
-        <p>Pour un voyage élégant et confortable, optez pour notre berline haut de gamme.</p>
+        <!-- Image de voiture avec siège auto -->
+        <img src="https://images.unsplash.com/photo-1601906792540-b92328983631?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjA1fDB8MHxwaG90by1wYWdlfHx8fGVzdHx8fGNoYXJsZXR0ZXJzfGVufDB8fHx8fDE2NzU3NjI4NzA&ixlib=rb-1.2.1&q=80&w=1080" alt="Voiture avec siège auto">
+        <h3>Voiture Familiale</h3>
+        <p>Parfaite pour les familles, avec siège auto pour plus de sécurité. À partir de 200 DHS/jour.</p>
         <a href="#" class="btn">Louer cette voiture</a>
       </div>
     </div>
